Fixed some layout issues

--- a/Timetable.Frontend/BellsSchedule/Components/AutomaticEvents/AutomaticEventsList.razor.css
+++ b/Timetable.Frontend/BellsSchedule/Components/AutomaticEvents/AutomaticEventsList.razor.css
@@ -8,3 +8,11 @@
     border-radius: 0.5em;
     font-weight: bold;
 }
+
+.separator {
+    background-color: var(--color-white-transparent);
+    height: 2px;
+    width: 100%;
+    border-radius: 1em;
+    margin: 0.25em 0;
+}
